belatedly saved notebook

--- a/adat/part/google_trends/predict.ipynb
+++ b/adat/part/google_trends/predict.ipynb
@@ -1569,11 +1569,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict18.to_csv('ridge_elorejelzes.csv')"
+    "predict18.to_csv('ridge_elorejelzes.csv',index=False)"
    ]
   }
  ],
