--- a/capstone_adat/project_summary_markdown.Rmd
+++ b/capstone_adat/project_summary_markdown.Rmd
@@ -4,27 +4,37 @@ author: "Adam Sanyo"
 date: "31 July 2018"
 output: html_document
 ---
+## Data loading
+TEXT here
+```{r echo=FALSE, results='hide',message=FALSE}
+rm(list=ls())
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+# Uncomment the below lines if you don't have the package:
+library(arm)
+library(readr)
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+library(lmtest)
+library(sandwich)
+library(descr)
+library(DataCombine)
+library(stargazer)
+library(mfx)
+library(data.table)
+library(readstata13)
+
+
+# CHECK  WORKING DIRECTORY
+getwd()
+setwd('C:/Users/adasan01/OneDrive - ARM/Documents/GitHub/106/capstone_adat')
+
+# LOAD  DATA
+data <- read.csv("2018_egyeni_listas_29May.csv")
+data[is.na(data)] <- 0
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r warning=FALSE}
+###content here
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
