--- a/capstone_adat/project_summary_markdown.Rmd
+++ b/capstone_adat/project_summary_markdown.Rmd
@@ -619,7 +619,8 @@ The additional predictors were divided into quintiles to have categorical levels
 
 There was lots of missing data in these predictor (missig values have been replaced with 0)
 
-TBD - Mention AIC score for Fidesz and Jobbik
+The AIC score of the prediction on Fidesz is 3445 while it is 1853 on Jobbik. These scores are mixed when only the 2014 vote share is used for the prediction (for Fidesz, AIC with 1 predictor is 3472 which is actually higher, but for Jobbik, it is 1824 suggesting that not all predictors are useful when applied to the Jobbik prediction).
+
 ```{r warning=FALSE}
  data_telepulesadatok_t_star <-read.csv("Telepulesadatok_t_star.csv")
   colnames(data_telepulesadatok_t_star)[1] <- "telep_nev"
@@ -736,14 +737,15 @@ TBD - Mention AIC score for Fidesz and Jobbik
 
 If we use additional predictors such as the number of pensioners, age groups, and people on benefit, the predictions still remain the same.
 
-It is likely that analyzing different town sizes separately would improve the effectiveness of this prediction model. Also, since Budapest with 1 million voters counts as 1 data point while all the other towns account for 4.5 million votes in 3150 data points, there is a clear bias towards smaller cities.
-
-TBD - Mention AIC score for Jobbik
+It is likely that analyzing different town sizes separately or weighing the importance of data points would improve the effectiveness of this prediction model. Also, since Budapest with 1 million voters counts as 1 data point while all the other towns account for 4.5 million votes in 3150 data points, there is a clear bias towards smaller cities.
 
 
-### Analyzing outliers - TBD!!
+### Analyzing outliers by megye_id
 
-The prediction shows some towns with vastly different vote shares in 2018 compared to 2014. Towns such as x y z are in districts which were Jobbik target seats. As it was shown before, Fidesz performed better than expected in rural seats, meaning that it is likely that they have targeted these towns and OEVKs during the campaign.
+The prediction shows some towns with vastly different vote shares in 2018 compared to 2014. 
+
+Looking at the graph with megye_id (county id) values, we can see that there are dozens of massively overperforming areas in Baranya, Borsod, Somogy, Veszprém, Zala (2,5, 15, 19, 20) counties. Some of these counties are have more small towns than others and three of them are next to the southern border of Hungary suggesting that Fidesz probably targeted these voters to win more votes in the areas. Also, all of these counties contained at least one target opposition seats.
+
 ```{r warning=FALSE}
 
 
@@ -888,13 +890,18 @@ The prediction shows some towns with vastly different vote shares in 2018 compar
 
 ```
 
-
 ##Part 5: GLM prediction on OEVK level
-
 
 GLM prediction was also done using OEVK level metrics on the 2018 data. Since some of the predictors from the KSH database cannot be merged on the OEVK level, they were not used for this analysis. Instead, the number of cities, proportion of cities vs. towns, and the previously defined OEVK profile was used. With 106 data points, this analysis showed a clearer picture of where Fidesz and other parties overperformed and underperformed.
 
-TBD - analyze over/underperformance
+In the case of Fidesz, they managed to get better results in Jobbik target seats such as seats in Heves and Borsod, but they also performed worse in Budapest according to GLM.
+
+Jobbik performed worse in all key counties (Borsod, Jász-Nagykun Szolnok, and Heves) suggesting that their voters were taken by Fidesz.
+
+The chart on MSZP does not tell much as GLM underpredicts their support completely as their support collapsed since 2014. The joint list from 2014 is not comparable to the 2018 results.
+
+LMP results show a mixed picture in non-target seats. Some of their candidates performed very well thanks to tactical voting while others underperformed for the same reason. Overall, GLM does not tell much about LMP since their contested seats were the most affected by tactical voting.
+
 ```{r warning=FALSE}
  new_by_oevk_2014 <- read.csv("oevk2014_clean_new.csv")
   egyeni_lista_by_oevk_2018 <- read.csv("2018_by_oevk_clean.csv")
@@ -928,26 +935,98 @@ oevk_2014_vs_2018_glm_fidesz <- glm(egyeni_fidesz_pc.y ~ egyeni_fidesz_pc.x + sz
     theme_minimal() 
   ggsave(("fidesz_GLM_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
 
+   ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_fidesz_pc.y, y= pred_logit_fidesz)) + xlim(0.25, 0.65) + ylim(0.25, 0.65) +
+    geom_text(aes(label=profil), size = 3, check_overlap = FALSE) +
+    geom_smooth(method = "loess") +  ggtitle("Fidesz - Actual and predicted vote share in each OEVK") + xlab("2018 Fidesz vote %") + ylab("GLM prediction") +
+    geom_line(aes(x=pred_logit_fidesz, y=pred_logit_fidesz), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("fidesz_GLM_by_OEVK_2.png"), width = 25, height = 25, units = c("cm"))
 
-#JOBBIK  - TBD
+#JOBBIK
   
-
-#MSZP - TBD
+oevk_2014_vs_2018_glm_jobbik <- glm(egyeni_jobbik_pc.y ~ egyeni_jobbik_pc.x + szavazokorok_szama + telepulesek_szama + profil + varos_aranya, data=oevk_2014_vs_2018)
+  summary(oevk_2014_vs_2018_glm_jobbik)
+  coeftest(oevk_2014_vs_2018_glm_jobbik)
   
-
-#LMP - TBD
+  logitcoeffs_oevk_2014_vs_2018_glm_jobbik <- glm(egyeni_jobbik_pc.y ~ egyeni_jobbik_pc.x + szavazokorok_szama + telepulesek_szama + profil + varos_aranya, data=oevk_2014_vs_2018, family='binomial')
+  
+  summary(logitcoeffs_oevk_2014_vs_2018_glm_jobbik)
+  
+  oevk_2014_vs_2018$pred_logit_jobbik <- predict.glm(logitcoeffs_oevk_2014_vs_2018_glm_jobbik, type="response")
   
   
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_jobbik_pc.y, y= pred_logit_jobbik)) + xlim(0.00, 0.5) + ylim(0.00, 0.5) +
+    geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
+    geom_point(color ="red") +
+    geom_smooth(method = "loess") +  ggtitle("Jobbik - Actual and predicted vote share in each OEVK") + xlab("2018 Jobbik vote %") + ylab("GLM prediction") +
+    geom_line(aes(x=pred_logit_jobbik, y=pred_logit_jobbik), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("jobbik_GLM_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  
+   ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_jobbik_pc.y, y= pred_logit_jobbik)) + xlim(0.00, 0.5) + ylim(0.00, 0.5) +
+    geom_text(aes(label=profil), size = 3, check_overlap = FALSE) +
+    geom_smooth(method = "loess") +  ggtitle("Jobbik - Actual and predicted vote share in each OEVK") + xlab("2018 Jobbik vote %") + ylab("GLM prediction") +
+    geom_line(aes(x=pred_logit_jobbik, y=pred_logit_jobbik), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("jobbik_GLM_by_OEVK_2.png"), width = 25, height = 25, units = c("cm"))
+  
+  
+#MSZP
+  
+oevk_2014_vs_2018_glm_mszp <- glm(egyeni_mszp_pc ~ egyeni_kormanyvaltok_pc + szavazokorok_szama + telepulesek_szama + profil + varos_aranya, data=oevk_2014_vs_2018)
+  summary(oevk_2014_vs_2018_glm_mszp)
+  coeftest(oevk_2014_vs_2018_glm_mszp)
+  
+  logitcoeffs_oevk_2014_vs_2018_glm_mszp <- glm(egyeni_mszp_pc ~ egyeni_kormanyvaltok_pc + szavazokorok_szama + telepulesek_szama + profil + varos_aranya, data=oevk_2014_vs_2018, family='binomial')
+  
+  summary(logitcoeffs_oevk_2014_vs_2018_glm_mszp)
+  
+  oevk_2014_vs_2018$pred_logit_mszp <- predict.glm(logitcoeffs_oevk_2014_vs_2018_glm_mszp, type="response")
+  
+  
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_mszp_pc, y= pred_logit_mszp)) + xlim(0.001, 0.65) + ylim(0.001, 0.65) +
+    geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
+    geom_point(color ="red") +
+    geom_smooth(method = "loess") +  ggtitle("MSZP - Actual and predicted vote share in each OEVK") + xlab("2018 MSZP vote %") + ylab("GLM prediction") +
+    geom_line(aes(x=pred_logit_mszp, y=pred_logit_mszp), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("mszp_GLM_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  
+#LMP 
+  
+  oevk_2014_vs_2018_glm_lmp <- glm(egyeni_lmp_pc.y ~ egyeni_lmp_pc.x + szavazokorok_szama + telepulesek_szama + profil + varos_aranya, data=oevk_2014_vs_2018)
+  summary(oevk_2014_vs_2018_glm_lmp)
+  coeftest(oevk_2014_vs_2018_glm_lmp)
+  
+  logitcoeffs_oevk_2014_vs_2018_glm_lmp <- glm(egyeni_lmp_pc.y ~ egyeni_lmp_pc.x + szavazokorok_szama + telepulesek_szama + profil + varos_aranya, data=oevk_2014_vs_2018, family='binomial')
+  
+  summary(logitcoeffs_oevk_2014_vs_2018_glm_lmp)
+  
+  oevk_2014_vs_2018$pred_logit_lmp <- predict.glm(logitcoeffs_oevk_2014_vs_2018_glm_lmp, type="response")
+  
+  
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_lmp_pc.y, y= pred_logit_lmp)) + xlim(0.001, 0.2) + ylim(0.001, 0.2) +
+    geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
+    geom_point(color ="red") +
+    geom_smooth(method = "loess") +  ggtitle("LMP - Actual and predicted vote share in each OEVK") + xlab("2018 LMP vote %") + ylab("GLM prediction") +
+    geom_line(aes(x=pred_logit_lmp, y=pred_logit_lmp), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("lmp_GLM_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
 ```
 
 ## Part 6: UNS predictions and deviation
 
 The final set of prediction comparison was done using the 2014 raw UNS data compared to the 2018 data.
 
-This shows the list of constituencies and contituency profile types where parties overperformed or underperformed compared to the expected UNS vote share.
+This shows the list of constituencies and contituency profile types where parties overperformed or underperformed compared to the expected UNS vote share. This analysis is useful as it shows how the share of votes of a given party had reallocated between different parts of the the country since the last election.
+
+Fidesz
+
+Jobbik
 ```{r warning=FALSE}
  ### UNIFORM SWING vote share
-
 
 data <- read.csv("vote_counts_precincts_2b.csv")
   
@@ -989,60 +1068,134 @@ data <- read.csv("vote_counts_precincts_2b.csv")
   
   data_clean <- data_clean[, egyeni_lmp_pc := egyeni_lmp / (egyeni_fidesz + egyeni_jobbik + egyeni_kormanyvaltok + egyeni_lmp + egyeb)]
 
-  #2014 results - single-seats
+
+  ##2014 results - OEVK
   
-  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2014_orszagos_UNS := 44.13] 
-  data_UNS <- data_UNS[, Kormanyvaltok_2014_orszagos := 26.86]
-  data_UNS <- data_UNS[, Jobbik_2014_orszagos := 20.34]
-  data_UNS <- data_UNS[, LMP_2014_orszagos := 4.98]
-  data_UNS <- data_UNS[, Egyeb_2014_orszagos := 3.69]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2014_egyeni_UNS := 44.13] 
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Kormanyvaltok_2014_egyeni_UNS := 26.86]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Jobbik_2014_egyeni_UNS := 20.34]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, LMP_2014_egyeni_UNS := 4.98]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Egyeb_2014_orszagos_UNS := 3.69]
   
-  data_UNS <- data_UNS[, reszvetel_2014 := 60.99] 
-  
-  
-  #2014 results -party list - TB ADDED
-  
-  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2014_orszagos_UNS := 44.13] 
-  data_UNS <- data_UNS[, Kormanyvaltok_2014_orszagos := 26.86]
-  data_UNS <- data_UNS[, Jobbik_2014_orszagos := 20.34]
-  data_UNS <- data_UNS[, LMP_2014_orszagos := 4.98]
-  data_UNS <- data_UNS[, Egyeb_2014_orszagos := 3.69]
-  
-  data_UNS <- data_UNS[, reszvetel_2014 := 60.99] 
-  
-  #2018 results - add party lists and OEVK
-  
-  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2018_orszagos_UNS := 47.73] 
-  data_UNS <- data_UNS[, MSZP_P_2018_orszagos := 12.46]
-  data_UNS <- data_UNS[, Jobbik_2018_orszagos := 19.96]
-  data_UNS <- data_UNS[, LMP_2018_orszagos := 7.43]
-  data_UNS <- data_UNS[, DK_2018_orszagos := 5.6]
-  data_UNS <- data_UNS[, Momentum_2018_orszagos := 3.18]
-  
-  data_UNS <- data_UNS[, reszvetel_2018 := 70.2]  
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, reszvetel_2014 := 60.99] 
   
   
+  #2014 results -party lists
   
-  oevk_2014_vs_2018$Fidesz_2018_UNS_egyeni_pc <- oevk_2014_vs_2018[, egyeni_fidesz_pc.x * (Fidesz_2018_orszagos_UNS / Fidesz_2014_orszagos_UNS)] 
-  oevk_2014_vs_2018$Fidesz_2018_UNS_listas_pc <- oevk_2014_vs_2018[, orszagos_fidesz_pc * (Fidesz_2018_orszagos_UNS / Fidesz_2014_orszagos_UNS)]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2014_orszagos_UNS := 43.55] 
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Kormanyvaltok_2014_orszagos_UNS := 26.21]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Jobbik_2014_orszagos_UNS := 20.69]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, LMP_2014_orszagos_UNS := 5.47]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Egyeb_2014_orszagos_UNS := 4.08]
+  
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, reszvetel_2014 := 60.99] 
+  
+  
+  #2018 results - OEVK
+  
+   
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2018_egyeni_UNS := 47.97] 
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, MSZP_P_DK_2018_egyeni_UNS := 17.66]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Jobbik_2018_egyeni_UNS := 23.23]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, LMP_2018_egyeni_UNS := 5.69]
+
+  
+  #2018 results - party lists
+  
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Fidesz_2018_orszagos_UNS := 47.36] 
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, MSZP_P_DK_2018_orszagos_UNS := 17.95]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, Jobbik_2018_orszagos_UNS := 19.81]
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, LMP_2018_orszagos_UNS := 7.31]
+
+  oevk_2014_vs_2018 <- oevk_2014_vs_2018[, reszvetel_2018 := 70.2]  
+  
+  ## DEFINE ALL UNS values (OEVK and party list ones) for 4+1 parties
+  
+  oevk_2014_vs_2018$Fidesz_2018_UNS_listas_pc <- oevk_2014_vs_2018[, orszagos_fidesz_pc * (Fidesz_2018_orszagos_UNS / Fidesz_2014_orszagos_UNS)] 
+  oevk_2014_vs_2018$Fidesz_2018_UNS_egyeni_pc <- oevk_2014_vs_2018[, egyeni_fidesz_pc.x * (Fidesz_2018_egyeni_UNS / Fidesz_2014_egyeni_UNS)]
+  
+  
+  oevk_2014_vs_2018$Jobbik_2018_UNS_listas_pc <- oevk_2014_vs_2018[, orszagos_jobbik_pc * (Jobbik_2018_orszagos_UNS / Jobbik_2014_orszagos_UNS)] 
+  oevk_2014_vs_2018$Jobbik_2018_UNS_egyeni_pc <- oevk_2014_vs_2018[, egyeni_jobbik_pc.x * (Jobbik_2018_egyeni_UNS / Jobbik_2014_egyeni_UNS)]
+  
+  
+  oevk_2014_vs_2018$MSZP_DK_2018_UNS_listas_pc <- oevk_2014_vs_2018[, orszagos_kormanyvaltok_pc * (MSZP_P_DK_2018_orszagos_UNS / Kormanyvaltok_2014_orszagos_UNS)] 
+  oevk_2014_vs_2018$MSZP_DK_2018_UNS_egyeni_pc <- oevk_2014_vs_2018[, egyeni_kormanyvaltok_pc * (MSZP_P_DK_2018_egyeni_UNS / Kormanyvaltok_2014_egyeni_UNS)]
+  
+  oevk_2014_vs_2018$LMP_2018_UNS_listas_pc <- oevk_2014_vs_2018[, orszagos_lmp_pc * (LMP_2018_orszagos_UNS / LMP_2014_orszagos_UNS)] 
+  oevk_2014_vs_2018$LMP_2018_UNS_egyeni_pc <- oevk_2014_vs_2018[, egyeni_lmp_pc.x * (LMP_2018_egyeni_UNS / LMP_2014_egyeni_UNS)]
+
+write.csv(oevk_2014_vs_2018, "oevk_2014_2018_UNS_OEVK_values.csv")  
+  
+  # FIDESZ
   
   ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_fidesz_pc.y, y= Fidesz_2018_UNS_egyeni_pc)) + xlim(0.25, 0.65) + ylim(0.25, 0.65) +
     geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
     geom_point(color ="red") +
     geom_smooth(method = "loess") +  ggtitle("Fidesz - Actual and predicted vote share in each OEVK") + xlab("2018 Fidesz vote %") + ylab("UNS prediction") +
-    geom_line(aes(x=Fidesz_2018_UNS_egyeni_pc, y=Fidesz_2018_UNS_pc), color="green", size = 1) +
+    geom_line(aes(x=Fidesz_2018_UNS_egyeni_pc, y=Fidesz_2018_UNS_egyeni_pc), color="green", size = 1) +
     theme_minimal() 
   ggsave(("fidesz_UNS_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
   
   ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_fidesz_pc.y, y= Fidesz_2018_UNS_egyeni_pc)) + xlim(0.25, 0.65) + ylim(0.25, 0.65) +
     geom_text(aes(label=profil), size = 3, check_overlap = FALSE) +
     geom_smooth(method = "loess") +  ggtitle("Fidesz - Actual and predicted vote share in each OEVK type") + xlab("2018 Fidesz vote %") + ylab("UNS prediction") +
-    geom_line(aes(x=Fidesz_2018_UNS_egyeni_pc, y=Fidesz_2018_UNS_pc), color="green", size = 1) +
+    geom_line(aes(x=Fidesz_2018_UNS_egyeni_pc, y=Fidesz_2018_UNS_egyeni_pc), color="green", size = 1) +
     theme_minimal() 
   ggsave(("fidesz_UNS_by_OEVK_type.png"), width = 25, height = 25, units = c("cm"))
   
   
+  #JOBBIK
   
+   ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_jobbik_pc.y, y= Jobbik_2018_UNS_egyeni_pc)) + xlim(0.05, 0.45) + ylim(0.05, 0.45) +
+    geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
+    geom_point(color ="red") +
+    geom_smooth(method = "loess") +  ggtitle("Jobbik - Actual and predicted vote share in each OEVK") + xlab("2018 Jobbik vote %") + ylab("UNS prediction") +
+    geom_line(aes(x=Jobbik_2018_UNS_egyeni_pc, y=Jobbik_2018_UNS_egyeni_pc), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("Jobbik_UNS_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_jobbik_pc.y, y= Jobbik_2018_UNS_egyeni_pc)) + xlim(0.05, 0.45) + ylim(0.05, 0.45) +
+    geom_text(aes(label=profil), size = 3, check_overlap = FALSE) +
+    geom_smooth(method = "loess") +  ggtitle("Jobbik - Actual and predicted vote share in each OEVK type") + xlab("2018 Jobbik vote %") + ylab("UNS prediction") +
+    geom_line(aes(x=Jobbik_2018_UNS_egyeni_pc, y=Jobbik_2018_UNS_egyeni_pc), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("Jobbik_UNS_by_OEVK_type.png"), width = 25, height = 25, units = c("cm"))
+  
+  #MSZP-DK
+  
+   ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_mszp_pc, y= MSZP_DK_2018_UNS_egyeni_pc)) + xlim(0.001, 0.6) + ylim(0.001, 0.6) +
+    geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
+    geom_point(color ="red") +
+    geom_smooth(method = "loess") +  ggtitle("MSZP - Actual and predicted vote share in each OEVK") + xlab("2018 MSZP vote %") + ylab("UNS prediction") +
+    geom_line(aes(x=MSZP_DK_2018_UNS_egyeni_pc, y=MSZP_DK_2018_UNS_egyeni_pc), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("MSZP_UNS_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_mszp_pc, y= MSZP_DK_2018_UNS_egyeni_pc)) + xlim(0.001, 0.6) + ylim(0.001, 0.6) +
+    geom_text(aes(label=profil), size = 3, check_overlap = FALSE) +
+    geom_smooth(method = "loess") +  ggtitle("MSZP - Actual and predicted vote share in each OEVK type") + xlab("2018 MSZP vote %") + ylab("UNS prediction") +
+    geom_line(aes(x=MSZP_DK_2018_UNS_egyeni_pc, y=MSZP_DK_2018_UNS_egyeni_pc), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("MSZP_UNS_by_OEVK_type.png"), width = 25, height = 25, units = c("cm"))
+  
+  
+  #LMP
+
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_lmp_pc.y, y= LMP_2018_UNS_egyeni_pc)) + xlim(0.001, 0.3) + ylim(0.001, 0.3) +
+    geom_text(aes(label=oevk_id), size = 1.5, check_overlap = FALSE) +
+    geom_point(color ="red") +
+    geom_smooth(method = "loess") +  ggtitle("LMP - Actual and predicted vote share in each OEVK") + xlab("2018 LMP vote %") + ylab("UNS prediction") +
+    geom_line(aes(x=LMP_2018_UNS_egyeni_pc, y=LMP_2018_UNS_egyeni_pc), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("LMP_UNS_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  ggplot(data = oevk_2014_vs_2018, aes(x=egyeni_lmp_pc.y, y= MSZP_DK_2018_UNS_egyeni_pc)) + xlim(0.001, 0.3) + ylim(0.001, 0.3) +
+    geom_text(aes(label=profil), size = 3, check_overlap = FALSE) +
+    geom_smooth(method = "loess") +  ggtitle("LMP - Actual and predicted vote share in each OEVK type") + xlab("2018 LMP vote %") + ylab("UNS prediction") +
+    geom_line(aes(x=LMP_2018_UNS_egyeni_pc, y=LMP_2018_UNS_egyeni_pc), color="green", size = 1) +
+    theme_minimal() 
+  ggsave(("LMP_UNS_by_OEVK_type.png"), width = 25, height = 25, units = c("cm"))  
 
 ### UNS deviation   
   
@@ -1051,14 +1204,55 @@ data <- read.csv("vote_counts_precincts_2b.csv")
   oevk_2014_vs_2018$Fidesz_2018_UNS_egyeni_pc_elteres <- oevk_2014_vs_2018[, egyeni_fidesz_pc.y - Fidesz_2018_UNS_egyeni_pc] 
   
   ggplot(oevk_2014_vs_2018, aes(egyeni_fidesz_pc.y, Fidesz_2018_UNS_egyeni_pc_elteres)) + geom_point(color ="red") +
-    geom_text(aes(label=oevk_id), size = 2) + geom_smooth(method = "lm") + ggtitle("Fidesz actual vote share and prediction error by OEVK") +
+    geom_text(aes(label=oevk_id), size = 2) + geom_smooth(method = "lm") + 
+    geom_hline (yintercept=0, linetype="dashed", color = "red") +
+    ggtitle("Fidesz actual vote share and prediction error by OEVK") +
     xlab("Fidesz vote share") + ylab("Prediction error") +
     xlim(0.25, 0.65) +
     theme_minimal()
   ggsave(("fidesz_UNS_deviation_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
   
 
-  #TBD - all UNS deviations
+  #JOBBIK
+  
+   oevk_2014_vs_2018$Jobbik_2018_UNS_egyeni_pc_elteres <- oevk_2014_vs_2018[, egyeni_jobbik_pc.y - Jobbik_2018_UNS_egyeni_pc] 
+  
+  ggplot(oevk_2014_vs_2018, aes(egyeni_jobbik_pc.y, Jobbik_2018_UNS_egyeni_pc_elteres)) + geom_point(color ="red") +
+    geom_text(aes(label=oevk_id), size = 2) + geom_smooth(method = "lm") + 
+    geom_hline (yintercept=0, linetype="dashed", color = "red") +
+    ggtitle("Jobbik actual vote share and prediction error by OEVK") +
+    xlab("Jobbik vote share") + ylab("Prediction error") +
+    xlim(0.05, 0.45) +
+    theme_minimal()
+  ggsave(("jobbik_UNS_deviation_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  
+  #MSZP-DK
+  
+   oevk_2014_vs_2018$MSZP_DK_2018_UNS_egyeni_pc_elteres <- oevk_2014_vs_2018[, egyeni_mszp_pc - MSZP_DK_2018_UNS_egyeni_pc] 
+  
+  ggplot(oevk_2014_vs_2018, aes(egyeni_mszp_pc, MSZP_DK_2018_UNS_egyeni_pc_elteres)) + geom_point(color ="red") +
+    geom_text(aes(label=oevk_id), size = 2) + geom_smooth(method = "lm") + 
+    geom_hline (yintercept=0, linetype="dashed", color = "red") +
+    ggtitle("MSZP actual vote share and prediction error by OEVK") +
+    xlab("MSZP vote share") + ylab("Prediction error") +
+    xlim(0.001, 0.6) +
+    theme_minimal()
+  ggsave(("mszp_UNS_deviation_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
+  
+  
+  #LMP
+  
+   oevk_2014_vs_2018$LMP_2018_UNS_egyeni_pc_elteres <- oevk_2014_vs_2018[, egyeni_lmp_pc.y - LMP_2018_UNS_egyeni_pc] 
+  
+  ggplot(oevk_2014_vs_2018, aes(egyeni_lmp_pc.y, LMP_2018_UNS_egyeni_pc_elteres)) + geom_point(color ="red") +
+    geom_text(aes(label=oevk_id), size = 2) + geom_smooth(method = "lm") + 
+    geom_hline (yintercept=0, linetype="dashed", color = "red") +
+    ggtitle("Fidesz actual vote share and prediction error by OEVK") +
+    xlab("Fidesz vote share") + ylab("Prediction error") +
+    xlim(0.001, 0.25) +
+    theme_minimal()
+  ggsave(("fidesz_UNS_deviation_by_OEVK.png"), width = 25, height = 25, units = c("cm"))
   
   
   
@@ -1114,7 +1308,7 @@ setwd('C:/Users/adasan01/OneDrive - ARM/Documents/GitHub/106/capstone_adat')
   
   #uniform swing kalkulacio data_UNS
   
-  #new inputs - 
+  #2014 baseline
   
   data_UNS <- data_clean[, Fidesz_2014_orszagos := 44.13] 
   data_UNS <- data_UNS[, Kormanyvaltok_2014_orszagos := 26.86]
@@ -1124,20 +1318,20 @@ setwd('C:/Users/adasan01/OneDrive - ARM/Documents/GitHub/106/capstone_adat')
   
   data_UNS <- data_UNS[, reszvetel_2014 := 60.99] 
   
-  #friss?theto ?j adatok alapj?n
+  # AMEND for predictions
   
-  data_UNS <- data_UNS[, Fidesz_2018_orszagos := 47.73] 
+  data_UNS <- data_UNS[, Fidesz_2018_orszagos := 42] 
   data_UNS <- data_UNS[, MSZP_P_2018_orszagos := 12.5]
-  data_UNS <- data_UNS[, Jobbik_2018_orszagos := 23.5]
-  data_UNS <- data_UNS[, LMP_2018_orszagos := 6]
+  data_UNS <- data_UNS[, Jobbik_2018_orszagos := 22.5]
+  data_UNS <- data_UNS[, LMP_2018_orszagos :=8.5]
   data_UNS <- data_UNS[, DK_2018_orszagos := 7.5]
   data_UNS <- data_UNS[, Momentum_2018_orszagos := 3]
   data_UNS <- data_UNS[, Egyutt_2018 := 2]
   data_uns <- data_UNS[, MKKP_2018 := 1]
-  #egyeb 1.5%
+  #egyeb 1%
   
   
-  data_UNS <- data_UNS[, reszvetel_2018 := 70.2]  
+  data_UNS <- data_UNS[, reszvetel_2018 := 70]  
   
   #kiegeszito 2014-es benchmarkok az MSZP-P, DK, es Momentum adataihoz
   
